# Desktop-overlay-manager

./: README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
desktop_overlay_manager/: __init__.py  overlay.py
tests/: test_manager.py
